--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -6,6 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="js/supabase-client.js"></script>
   <link rel="stylesheet" href="assets/style.css">
+  <script src="js/auth.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -30,15 +31,64 @@
 
       <button onclick="crearCliente()">💾 Guardar Cliente</button>
     </div>
+
+    <section class="listado-clientes">
+      <h2>📋 Clientes registrados</h2>
+      <select id="cliente-consulta" class="listado-clientes__select">
+        <option value="">Cargando clientes...</option>
+      </select>
+      <p class="listado-clientes__nota">
+        Esta lista desplegable es solo informativa; seleccionar un cliente no realiza ninguna acción.
+      </p>
+    </section>
   </main>
 
   <div id="footer"></div>
 
   <script>
     (async () => {
+      const sesion = await portalAuth.asegurarSesionActiva();
+      if (!sesion) return;
+
       document.getElementById("header").innerHTML = await fetch("header.html").then(r => r.text());
+      portalAuth.refrescarIndicadoresSesion();
       document.getElementById("footer").innerHTML = await fetch("footer.html").then(r => r.text());
+      await cargarClientes();
     })();
+
+    async function cargarClientes() {
+      const select = document.getElementById('cliente-consulta');
+      if (!select) return;
+
+      select.innerHTML = '<option value="">Cargando clientes...</option>';
+      select.disabled = true;
+
+      const { data, error } = await supabase
+        .from('CLIENTE')
+        .select('id, nombre')
+        .order('nombre', { ascending: true });
+
+      if (error) {
+        console.error('Error al cargar clientes:', error);
+        select.innerHTML = '<option value="">Error al cargar clientes</option>';
+        return;
+      }
+
+      if (!data || data.length === 0) {
+        select.innerHTML = '<option value="">No hay clientes registrados</option>';
+        return;
+      }
+
+      select.disabled = false;
+      select.innerHTML = '<option value="">Clientes registrados (solo consulta)</option>';
+
+      data.forEach(cliente => {
+        const option = document.createElement('option');
+        option.value = cliente.id;
+        option.textContent = cliente.nombre;
+        select.appendChild(option);
+      });
+    }
 
     async function crearCliente() {
       const nombre = document.getElementById('nombre').value.trim();
