--- a/eliminar.html
+++ b/eliminar.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="assets/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="js/supabase-client.js"></script>
+  <script src="js/auth.js"></script>
   <style>
     .eliminar-container {
       font-family: sans-serif;
@@ -78,8 +79,12 @@
 
   <script>
     (async () => {
+      const sesion = await portalAuth.asegurarSesionActiva();
+      if (!sesion) return;
+
       try {
         document.getElementById("header").innerHTML = await fetch('header.html').then(r => r.text());
+        portalAuth.refrescarIndicadoresSesion();
         document.getElementById("footer").innerHTML = await fetch('footer.html').then(r => r.text());
         cargarInventario();
       } catch (e) {
