--- a/inventario.html
+++ b/inventario.html
@@ -6,6 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
   <script src="js/supabase-client.js"></script>
+  <script src="js/auth.js"></script>
   <link rel="stylesheet" href="assets/style.css">
   <style>
     #modal-progreso {
@@ -80,8 +81,13 @@
     let inventarioCompleto = [];
 
     (async () => {
+      const sesion = await portalAuth.asegurarSesionActiva();
+      if (!sesion) return;
+
       document.getElementById("header").innerHTML = await fetch('header.html').then(r => r.text());
+      portalAuth.refrescarIndicadoresSesion();
       document.getElementById("footer").innerHTML = await fetch('footer.html').then(r => r.text());
+
       await obtenerInventario();
       cargarInventario();
     })();
