--- a/modificar.html
+++ b/modificar.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="assets/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="js/supabase-client.js"></script>
+  <script src="js/auth.js"></script>
 </head>
 <body>
 <div id="header"></div>
@@ -41,7 +42,11 @@
 let inventarioCompleto = [];
 
 (async () => {
+  const sesion = await portalAuth.asegurarSesionActiva();
+  if (!sesion) return;
+
   document.getElementById("header").innerHTML = await fetch('header.html').then(r => r.text());
+  portalAuth.refrescarIndicadoresSesion();
   document.getElementById("footer").innerHTML = await fetch('footer.html').then(r => r.text());
   await obtenerInventario();
   cargarInventario();
