--- a/modificar_cliente.html
+++ b/modificar_cliente.html
@@ -6,6 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="js/supabase-client.js"></script>
   <link rel="stylesheet" href="assets/style.css">
+  <script src="js/auth.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -39,8 +40,13 @@
 
   <script>
     (async () => {
+      const sesion = await portalAuth.asegurarSesionActiva();
+      if (!sesion) return;
+
       document.getElementById("header").innerHTML = await fetch("header.html").then(r => r.text());
+      portalAuth.refrescarIndicadoresSesion();
       document.getElementById("footer").innerHTML = await fetch("footer.html").then(r => r.text());
+      cargarClientes();
     })();
 
     async function cargarClientes() {
@@ -97,8 +103,6 @@
         window.location.href = 'registrar_venta.html';
       }
     }
-
-    cargarClientes();
   </script>
 </body>
 </html>
