--- a/ver_ventas.html
+++ b/ver_ventas.html
@@ -6,6 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="js/supabase-client.js"></script>
   <link rel="stylesheet" href="assets/style.css">
+  <script src="js/auth.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -57,8 +58,13 @@
 
   <script>
     (async () => {
+      const sesion = await portalAuth.asegurarSesionActiva();
+      if (!sesion) return;
+
       document.getElementById("header").innerHTML = await fetch("header.html").then(r => r.text());
+      portalAuth.refrescarIndicadoresSesion();
       document.getElementById("footer").innerHTML = await fetch("footer.html").then(r => r.text());
+      cargarVentas('mes');
     })();
 
     function obtenerMesActual() {
@@ -192,8 +198,6 @@
       inputMesSelector.value = obtenerMesActual();
       inputMesSelector.addEventListener('change', () => cargarVentas('mes'));
     }
-
-    cargarVentas('mes');
   </script>
 </body>
 </html>
