--- a/registrar_venta.html
+++ b/registrar_venta.html
@@ -21,11 +21,15 @@
     <input list="nombres" type="text" id="filtroNombre" placeholder="👟 Nombre">
     <datalist id="nombres"></datalist>
 
-    <input list="marcas" type="text" id="filtroMarca" placeholder="🏷️ Marca">
-    <datalist id="marcas"></datalist>
+    <div class="filtro-botones">
+      <span>🏷️ Marca:</span>
+      <div id="marcas-botones" class="grupo-botones"></div>
+    </div>
 
-    <input list="tallas" type="text" id="filtroTalla" placeholder="📏 Talla">
-    <datalist id="tallas"></datalist>
+    <div class="filtro-botones">
+      <span>📏 Talla:</span>
+      <div id="tallas-botones" class="grupo-botones"></div>
+    </div>
 
     <button onclick="filtrarProductos()">Buscar</button>
     <button onclick="limpiarFiltros()">Limpiar</button>
@@ -75,6 +79,8 @@
     let seleccionados = [];
     let totalFinalManual = false;
     let totalBaseActual = 0;
+    let filtroMarcaSeleccionada = '';
+    let filtroTallaSeleccionada = '';
 
     const totalFinalInput = document.getElementById('total-final');
     const fechaVentaInput = document.getElementById('fecha-venta');
@@ -139,8 +145,8 @@
     function filtrarProductos() {
       const codigo = document.getElementById('filtroCodigo').value.trim().toLowerCase();
       const nombre = document.getElementById('filtroNombre').value.trim().toLowerCase();
-      const marca = document.getElementById('filtroMarca').value.trim().toLowerCase();
-      const talla = document.getElementById('filtroTalla').value.trim();
+      const marca = filtroMarcaSeleccionada.trim().toLowerCase();
+      const talla = filtroTallaSeleccionada.trim();
 
       let filtrados = productos;
       if (codigo) filtrados = filtrados.filter(p => p.codigo.toLowerCase().includes(codigo));
@@ -356,9 +362,13 @@
     }
 
     function limpiarFiltros() {
-      ['filtroCodigo', 'filtroNombre', 'filtroMarca', 'filtroTalla'].forEach(id => {
+      ['filtroCodigo', 'filtroNombre'].forEach(id => {
         document.getElementById(id).value = '';
       });
+      filtroMarcaSeleccionada = '';
+      filtroTallaSeleccionada = '';
+      actualizarBotones('marcas-botones', filtroMarcaSeleccionada);
+      actualizarBotones('tallas-botones', filtroTallaSeleccionada);
       filtrarProductos();
     }
 
@@ -380,8 +390,54 @@
 
       setDatalist('codigos', codigos);
       setDatalist('nombres', nombres);
-      setDatalist('marcas', marcas);
-      setDatalist('tallas', tallas);
+      crearBotonesFiltro('marcas-botones', [...marcas].sort((a, b) => a.localeCompare(b)), 'marca');
+      crearBotonesFiltro(
+        'tallas-botones',
+        [...tallas].sort((a, b) => {
+          const numA = parseFloat(a);
+          const numB = parseFloat(b);
+          if (!Number.isNaN(numA) && !Number.isNaN(numB)) return numA - numB;
+          return a.localeCompare(b);
+        }),
+        'talla'
+      );
+    }
+
+    function crearBotonesFiltro(containerId, valores, tipo) {
+      const contenedor = document.getElementById(containerId);
+      if (!contenedor) return;
+      contenedor.innerHTML = '';
+
+      valores.forEach(valor => {
+        const boton = document.createElement('button');
+        boton.type = 'button';
+        boton.className = 'boton-filtro';
+        boton.dataset.valor = valor;
+        boton.textContent = valor;
+        boton.addEventListener('click', () => {
+          if (tipo === 'marca') {
+            filtroMarcaSeleccionada = filtroMarcaSeleccionada === valor ? '' : valor;
+            actualizarBotones(containerId, filtroMarcaSeleccionada);
+          } else {
+            filtroTallaSeleccionada = filtroTallaSeleccionada === valor ? '' : valor;
+            actualizarBotones(containerId, filtroTallaSeleccionada);
+          }
+          filtrarProductos();
+        });
+        contenedor.appendChild(boton);
+      });
+
+      const valorInicial = tipo === 'marca' ? filtroMarcaSeleccionada : filtroTallaSeleccionada;
+      actualizarBotones(containerId, valorInicial);
+    }
+
+    function actualizarBotones(containerId, valorSeleccionado) {
+      const contenedor = document.getElementById(containerId);
+      if (!contenedor) return;
+      contenedor.querySelectorAll('button').forEach(boton => {
+        const activo = valorSeleccionado !== '' && boton.dataset.valor === valorSeleccionado;
+        boton.classList.toggle('activo', activo);
+      });
     }
   </script>
 </body>
